data/derived/comb/progs/unify/prog8297.ml.out
Characters 28-31:
  let _ = additivePersistence 9.9;;
                              ^^^
Error: This expression has type float but an expression was expected of type
         int
